@@ -4,16 +4,22 @@ import com.hemasundar.options.models.CallCreditSpread;
 import com.hemasundar.options.models.CreditSpreadFilter;
 import com.hemasundar.options.models.LegFilter;
 import com.hemasundar.options.models.OptionChainResponse;
+import com.hemasundar.options.models.OptionChainResponse.OptionData;
+import com.hemasundar.options.models.OptionType;
 import com.hemasundar.options.models.OptionsStrategyFilter;
 import com.hemasundar.options.models.TradeSetup;
-import com.hemasundar.options.models.OptionType;
+import lombok.extern.log4j.Log4j2;
 import org.apache.commons.collections4.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.function.Predicate;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
+@Log4j2
 public class CallCreditSpreadStrategy extends AbstractTradingStrategy {
 
     public CallCreditSpreadStrategy() {
@@ -27,25 +33,15 @@ public class CallCreditSpreadStrategy extends AbstractTradingStrategy {
     @Override
     protected List<TradeSetup> findValidTrades(OptionChainResponse chain, String expiryDate,
             OptionsStrategyFilter filter) {
-        Map<String, List<OptionChainResponse.OptionData>> callMap = chain.getOptionDataForASpecificExpiryDate(
-                OptionType.CALL,
-                expiryDate);
+        Map<String, List<OptionData>> callMap = chain.getOptionDataForASpecificExpiryDate(
+                OptionType.CALL, expiryDate);
 
         if (callMap == null || callMap.isEmpty())
             return new ArrayList<>();
 
-        return findValidCallCreditSpreads(callMap, chain.getUnderlyingPrice(), filter);
-    }
-
-    private List<TradeSetup> findValidCallCreditSpreads(Map<String, List<OptionChainResponse.OptionData>> callMap,
-            double currentPrice, OptionsStrategyFilter filter) {
-        List<TradeSetup> spreads = new ArrayList<>();
-
-        // Get leg filters if available
-        LegFilter shortLegFilter = null;
-        LegFilter longLegFilter = null;
-        if (filter instanceof CreditSpreadFilter) {
-            CreditSpreadFilter csFilter = (CreditSpreadFilter) filter;
+        // Extract leg filters
+        LegFilter shortLegFilter = null, longLegFilter = null;
+        if (filter instanceof CreditSpreadFilter csFilter) {
             shortLegFilter = csFilter.getShortLeg();
             longLegFilter = csFilter.getLongLeg();
         }
@@ -53,68 +49,129 @@ public class CallCreditSpreadStrategy extends AbstractTradingStrategy {
         List<Double> sortedStrikes = callMap.keySet().stream()
                 .map(Double::parseDouble)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
 
-        // For Call Spreads, Short Call lower strike, Long Call higher strike
-        // Iterate for Short Call
-        for (int i = 0; i < sortedStrikes.size(); i++) {
-            double shortStrikePrice = sortedStrikes.get(i);
-            List<OptionChainResponse.OptionData> options = callMap.get(String.valueOf(shortStrikePrice));
-            if (CollectionUtils.isEmpty(options))
-                continue;
-            OptionChainResponse.OptionData shortCall = options.get(0);
+        return generateCandidates(callMap, sortedStrikes, chain.getUnderlyingPrice())
+                .filter(deltaFilter(shortLegFilter, longLegFilter))
+                .filter(creditFilter())
+                .filter(maxLossFilter(filter))
+                .filter(minReturnOnRiskFilter(filter))
+                .map(this::buildTradeSetup)
+                .toList();
+    }
 
-            // Short Call should be OTM (Strike > Current Price)
-            if (shortStrikePrice <= currentPrice)
-                continue;
+    /**
+     * Generates all valid 2-leg combinations as a stream of CallSpreadCandidate
+     * records.
+     * For Call Spreads: Short Strike (i) < Long Strike (j)
+     */
+    private Stream<CallSpreadCandidate> generateCandidates(Map<String, List<OptionData>> callMap,
+            List<Double> strikes, double currentPrice) {
+        return IntStream.range(0, strikes.size()).boxed()
+                .flatMap(i -> IntStream.range(i + 1, strikes.size()).boxed()
+                        .map(j -> createCandidate(callMap, strikes, i, j, currentPrice)))
+                .filter(Optional::isPresent)
+                .map(Optional::get);
+    }
 
-            // Short leg delta filter (null-safe)
-            if (shortLegFilter != null && !shortLegFilter.passesMaxDelta(shortCall.getAbsDelta()))
-                continue;
+    private Optional<CallSpreadCandidate> createCandidate(Map<String, List<OptionData>> callMap,
+            List<Double> strikes, int shortIndex, int longIndex, double currentPrice) {
+        double shortStrike = strikes.get(shortIndex);
 
-            // Iterate for Long Call (Higher Strike)
-            for (int j = i + 1; j < sortedStrikes.size(); j++) {
-                double longStrikePrice = sortedStrikes.get(j);
-                List<OptionChainResponse.OptionData> longOptions = callMap.get(String.valueOf(longStrikePrice));
-                if (CollectionUtils.isEmpty(longOptions))
-                    continue;
-                OptionChainResponse.OptionData longCall = longOptions.get(0);
-
-                // Long leg delta filter (null-safe)
-                if (longLegFilter != null && !longLegFilter.passesDeltaFilter(longCall.getAbsDelta()))
-                    continue;
-
-                double netCredit = (shortCall.getBid() - longCall.getAsk()) * 100;
-
-                if (netCredit <= 0)
-                    continue;
-
-                double strikeWidth = (longStrikePrice - shortStrikePrice) * 100;
-                double maxLoss = strikeWidth - netCredit;
-
-                if (maxLoss > filter.getMaxLossLimit())
-                    continue;
-
-                double requiredProfit = maxLoss * ((double) filter.getMinReturnOnRisk() / 100);
-
-                if (netCredit >= requiredProfit) {
-                    double breakEvenPrice = shortCall.getStrikePrice() + (netCredit / 100);
-                    double breakEvenPercentage = ((breakEvenPrice - currentPrice) / currentPrice) * 100;
-                    double returnOnRisk = (netCredit / maxLoss) * 100;
-
-                    spreads.add(CallCreditSpread.builder()
-                            .shortCall(shortCall)
-                            .longCall(longCall)
-                            .netCredit(netCredit)
-                            .maxLoss(maxLoss)
-                            .breakEvenPrice(breakEvenPrice)
-                            .breakEvenPercentage(breakEvenPercentage)
-                            .returnOnRisk(returnOnRisk)
-                            .currentPrice(currentPrice)
-                            .build());
-                }
-            }
+        // OTM Check: For Call Credit Spread, Short Strike must be > Current Price
+        // Wait, logic in original file was: if (shortStrikePrice <= currentPrice)
+        // continue
+        // So Short Strike MUST be > Current Price (OTM)
+        if (shortStrike <= currentPrice) {
+            return Optional.empty();
         }
-        return spreads;
+
+        OptionData shortLeg = getOption(callMap, shortStrike);
+        OptionData longLeg = getOption(callMap, strikes.get(longIndex));
+
+        if (shortLeg == null || longLeg == null) {
+            return Optional.empty();
+        }
+        return Optional.of(new CallSpreadCandidate(shortLeg, longLeg, currentPrice));
+    }
+
+    private OptionData getOption(Map<String, List<OptionData>> map, Double strike) {
+        List<OptionData> options = map.get(String.valueOf(strike));
+        return CollectionUtils.isEmpty(options) ? null : options.get(0);
+    }
+
+    // ========== FILTER PREDICATES ==========
+
+    private Predicate<CallSpreadCandidate> deltaFilter(LegFilter shortLegFilter, LegFilter longLegFilter) {
+        return candidate -> {
+            // Short leg: check max delta
+            if (shortLegFilter != null && !shortLegFilter.passesMaxDelta(candidate.shortLeg().getAbsDelta())) {
+                return false;
+            }
+            // Long leg: check delta (min/max)
+            if (longLegFilter != null && !longLegFilter.passesDeltaFilter(candidate.longLeg().getAbsDelta())) {
+                return false;
+            }
+            return true;
+        };
+    }
+
+    private Predicate<CallSpreadCandidate> creditFilter() {
+        return candidate -> candidate.netCredit() > 0;
+    }
+
+    private Predicate<CallSpreadCandidate> maxLossFilter(OptionsStrategyFilter filter) {
+        return candidate -> candidate.maxLoss() <= filter.getMaxLossLimit();
+    }
+
+    private Predicate<CallSpreadCandidate> minReturnOnRiskFilter(OptionsStrategyFilter filter) {
+        return candidate -> {
+            double requiredProfit = candidate.maxLoss() * ((double) filter.getMinReturnOnRisk() / 100);
+            return candidate.netCredit() >= requiredProfit;
+        };
+    }
+
+    // ========== TRADE BUILDER ==========
+
+    private TradeSetup buildTradeSetup(CallSpreadCandidate c) {
+        return CallCreditSpread.builder()
+                .shortCall(c.shortLeg())
+                .longCall(c.longLeg())
+                .netCredit(c.netCredit())
+                .maxLoss(c.maxLoss())
+                .breakEvenPrice(c.breakEvenPrice())
+                .breakEvenPercentage(c.breakEvenPercentage())
+                .returnOnRisk(c.returnOnRisk())
+                .currentPrice(c.currentPrice())
+                .build();
+    }
+
+    // ========== CANDIDATE RECORD ==========
+
+    private record CallSpreadCandidate(OptionData shortLeg, OptionData longLeg, double currentPrice) {
+
+        double netCredit() {
+            return (shortLeg.getBid() - longLeg.getAsk()) * 100;
+        }
+
+        double strikeWidth() {
+            return (longLeg.getStrikePrice() - shortLeg.getStrikePrice()) * 100;
+        }
+
+        double maxLoss() {
+            return strikeWidth() - netCredit();
+        }
+
+        double returnOnRisk() {
+            return (maxLoss() > 0) ? (netCredit() / maxLoss()) * 100 : 0;
+        }
+
+        double breakEvenPrice() {
+            return shortLeg.getStrikePrice() + (netCredit() / 100);
+        }
+
+        double breakEvenPercentage() {
+            return ((breakEvenPrice() - currentPrice) / currentPrice) * 100;
+        }
     }
 }
